unpackaged/main/default/objects/AcctSeed__Time_Card_Line__c/AcctSeed__Time_Card_Line__c.object-meta.xml
<CustomObject>
    <description>Used to document the project and project task associated with a time card. Time card lines aggregate to a specific time card.</description>
    <label>Time Card Line</label>
    <nameField>
        <displayFormat>TCL-{00000}</displayFormat>
        <label>Time Card Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Card Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>