unpackaged/main/default/objects/AcctSeed__Time_Card_Line__c/fields/AcctSeed__Parent_Status__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Parent_Status__c</fullName>
    <formula>TEXT(AcctSeed__Time_Card__r.AcctSeed__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Status</label>
    <type>Text</type>
</CustomField>