unpackaged/main/default/objects/AcctSeed__Time_Card_Line__c/fields/AcctSeed__Time_Card_Variable_1__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Time_Card_Variable_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Time Card Variable 1</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Accounting Variable must have a Type of "Time Card Variable 1".</errorMessage>
        <filterItems>
            <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>Time Card Variable 1</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
    <relationshipLabel>Time Card Lines</relationshipLabel>
    <relationshipName>Time_Card_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>