unpackaged/main/default/objects/AcctSeed__Time_Card_Line__c/fields/Allocated_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Opportunity_Amount__c</fullName>
    <formula>AcctSeed__Total_Hours__c *  OPP_Amount_per_Hour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocated Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>