unpackaged/main/default/objects/AcctSeed__Time_Card_Line__c/fields/OPP_Amount_per_Hour__c.field-meta.xml
<CustomField>
    <fullName>OPP_Amount_per_Hour__c</fullName>
    <formula>OPP_Net_Booking_Amount__c /   AcctSeed__Project__r.RollUp_Total_Time_Card_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OPP Amount per Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>