unpackaged/main/default/objects/AcctSeed__Time_Card_Line__c/fields/OPP_Net_Booking_Amount__c.field-meta.xml
<CustomField>
    <fullName>OPP_Net_Booking_Amount__c</fullName>
    <formula>AcctSeed__Project__r.Opp_Net_Book_Amnt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OPP Net Booking Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>