unpackaged/main/default/objects/AcctSeed__Time_Card_Line__c/fields/Project_Template__c.field-meta.xml
<CustomField>
    <fullName>Project_Template__c</fullName>
    <formula>AcctSeed__Project__r.AcctSeed__Template_Project__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Template</label>
    <type>Checkbox</type>
</CustomField>