unpackaged/main/default/objects/AcctSeed__Time_Card_Line__c/fields/Timcare_Card_Line_Detail_Row_Count__c.field-meta.xml
<CustomField>
    <fullName>Timcare_Card_Line_Detail_Row_Count__c</fullName>
    <label>Timcare Card Line Detail Row Count</label>
    <summaryForeignKey>AcctSeed__Time_Card_Day__c.AcctSeed__Time_Card_Line__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>